fixing spacing

--- a/css/new.css
+++ b/css/new.css
@@ -298,7 +298,7 @@ a:hover {
   }
 
   .content {
-    padding-top: 480px;
+    padding-top: 280px;
   }
 }
 
